<resources>
    <string name="app_name">Praktic</string>
    <string name="hello_user">Привет дружище. Я Князь Анатолий Олегович, разработчик данного приложения. Это приложение является практическим для проверки моих знаний.Поэтому не расстраивайся если это приложение будит для тебя бесполезным.</string>
    <string name="title_Horoscope">Гороскоп</string>
    <string name="find_out_the_horoscope">Узнать гороскоп</string>
    <string name="exit">Главное Меню</string>
    <string name="button_share">Поделится</string>
    <string name="text_timer">Таймер</string>
    <string-array name="zodiac_sign">
        <item>Овен</item>
        <item>Телец</item>
        <item>Близнецы</item>
        <item>Рак</item>
        <item>Лев</item>
        <item>Дева</item>
        <item>Весы</item>
        <item>Скорпион</item>
        <item>Стрелец</item>
        <item>Козерог</item>
        <item>Водолей</item>
        <item>Рыбы</item>
    </string-array>
    <string name="button_reset">СБРОС</string>
    <string name="button_start">ПУСК</string>
    <string name="button_stop">СТОП</string>
    <string name="int_timer">0:00:00</string>
</resources>